--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,9 @@
     "p5": "^1.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
+    "tanstack-query": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
