--- a/render.yaml
+++ b/render.yaml
@@ -2,4 +2,5 @@ services:
   - name: app
     env: python
     buildCommand: pip install -r requirements.txt
+    preDeployCommand: cp api
     startCommand: uvicorn main:app --host 0.0.0.0 --port 80
