--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,4 @@ services:
   - name: app
     env: python
     buildCommand: "pip install -r requirements.txt"
-    preDeployCommand: "cp API"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 80"
+    startCommand: "uvicorn api.main:app --host 0.0.0.0 --port 80"
