--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
   - name: app
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn api.main:app --host 0.0.0.0 --port 80"
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn api.main:app --host 0.0.0.0 --port 80
